# CLIP-I-JEPA-application

./: .gitignore  README.md  netlify.toml  pyproject.toml
atelier/: __init__.py  __main__.py  barman.py  barman_heads.py  config.py  gallery.py  handshake.py  interrogation.py  interrogation_unpooled.py  namer.py  probing_common.py  sculptor.py  world.py
darkroom/: README.md
darkroom/darkroom/: __init__.py  __main__.py  config.py  contact_sheet.py  developer.py  gallery.py  giants.py  loupe.py  prints.py
darkroom/tests/: test_contact_sheet.py  test_developer.py  test_loupe.py
export/: __init__.py  exhibits.py  for_the_vitrine.py  onnx_bodies.py  readouts.py
results/: report.md
tests/: test_encore.py  test_probes.py  test_shapes.py  test_unpooled.py  test_world.py
vitrine/: DEMO_NOTES.md  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  vitest.config.ts
vitrine/app/: globals.css  layout.tsx  page.tsx
vitrine/app/clip/: page.tsx
vitrine/app/commander/: page.tsx
vitrine/app/control/: page.tsx
vitrine/app/dataset/: page.tsx
vitrine/app/ijepa/: page.tsx
vitrine/app/latent-space/: page.tsx
vitrine/components/clip/: architecture.tsx
vitrine/components/commander/: lab.tsx
vitrine/components/dataset/: explorer.tsx  mapping.tsx
vitrine/components/handshake/: barman.tsx  bridge.tsx  (+2 more)
vitrine/lib/: heads.ts  inference.ts  probes.ts  results.ts  tokenizer.ts  world.ts
vitrine/public/: _headers  vercel.json
vitrine/scripts/: gather.mjs
vitrine/tests/: fixtures.ts  parity.test.ts  probes.test.ts  world.test.ts
(+28 files in other folders)
